envoy-config.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/repo/"
                          route:
                            prefix_rewrite: "/"
                            cluster: repo
                        - match:
                            prefix: "/compiler/"
                          route:
                            prefix_rewrite: "/"
                            cluster: compiler
                        - match:
                            prefix: "/executor/"
                          route:
                            prefix_rewrite: "/"
                            cluster: executor
                        - match:
                            prefix: "/"
                          route:
                            cluster: gateway
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: gateway
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: gateway
                      port_value: 8080
    - name: repo
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: repo
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: repo
                      port_value: 8080
    - name: compiler
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      health_checks:
        - timeout: 0.5s
          interval: 1s
          unhealthy_threshold: 1
          healthy_threshold: 1
          http_health_check:
            path: "/api/ready"
      load_assignment:
        cluster_name: compiler
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: compiler
                      port_value: 8080
    - name: executor
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      health_checks:
        - timeout: 0.5s
          interval: 1s
          unhealthy_threshold: 1
          healthy_threshold: 1
          http_health_check:
            path: "/api/ready"
      load_assignment:
        cluster_name: executor
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: executor
                      port_value: 8080
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
